--- a/Prison/.classpath
+++ b/Prison/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Admin/Downloads/spigot.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Wayne&apos;s Laptop/Desktop/wei ens shit/spigot.jar"/>
+	<classpathentry kind="lib" path="D:/Projects/Prison/spigot.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
