--- a/Prison/plugin.yml
+++ b/Prison/plugin.yml
@@ -13,3 +13,7 @@ commands:
     description:
     usage: /withdraw <amount>
     aliases: []
+  crates:
+    description:
+    usage: /crates [args]
+    aliases: []
