--- a/Prison/plugin.yml
+++ b/Prison/plugin.yml
@@ -17,3 +17,7 @@ commands:
     description:
     usage: /crates [args]
     aliases: []
+  moderation:
+    description:
+    usage: /moderation [args]
+    aliases: []
