--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"D:\\Projects\\Prison\\spigot.jar","type":"JAR","hints":{}},"ABSENT"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_151","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"D:\\Projects\\Prison\\spigot.jar","type":"JAR","hints":{}},"ABSENT"]]
