--- a/Prison/.settings/org.eclipse.core.resources.prefs
+++ b/Prison/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/com/Prison/listener/PlayerJoin.java=UTF-8
 encoding//src/com/Prison/main/Crates.java=UTF-8
