--- a/Prison/plugin.yml
+++ b/Prison/plugin.yml
@@ -25,3 +25,7 @@ commands:
     description:
     usage: /filetest
     aliases: [ft]
+  customenchant:
+    description:
+    usage: /customenchant
+    aliases: [ce]
